--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,12 @@ h3 {
     border-left: 5px solid #ccc;
     margin: 1em 0;
 }
+
+.box {
+  width: 300px; 
+  height: 200px; 
+  border: 10px solid blue; 
+  padding: 20px;
+  margin: 30px;
+  background-color: orange;
+}
